--- a/src/main/index.html
+++ b/src/main/index.html
@@ -80,7 +80,7 @@
         <div class="our-services__main">
             <h2 class="section-header">Our Services</h2>
             <ul class="our-services__nav">
-                <li class="our-services__nav__item"><a href="#">Web Design</a></li>
+                <li class="our-services__nav__item item-active"><a href="#">Web Design</a></li>
                 <li class="our-services__nav__item"><a href="#">Graphic Design</a></li>
                 <li class="our-services__nav__item"><a href="#">Online Support</a></li>
                 <li class="our-services__nav__item"><a href="#">App Design</a></li>
@@ -89,14 +89,27 @@
             </ul>
             <div class="our-services__description">
                 <img src="img/our_services.png" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur at delectus doloremque
-                    ducimus eaque impedit incidunt inventore iste nostrum, nulla quibusdam ratione repellat sed,
-                    similique ut vero voluptas voluptatem voluptates voluptatum. Ab aspernatur cumque deleniti dicta
-                    dignissimos dolor facilis hic iusto laboriosam laudantium non, pariatur porro possimus repellendus,
-                    voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea harum ipsa molestiae placeat
-                    recusandae suscipit voluptatibus. Amet cupiditate et eveniet ipsum labore natus officia, possimus!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur eaque, ipsum omnis porro
-                    possimus similique?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium blanditiis, dicta, expedita ipsam ipsum iste laboriosam minus molestias, placeat quod repudiandae suscipit tenetur voluptatibus. A architecto at beatae debitis, deleniti dignissimos distinctio dolor dolores dolorum eaque fuga fugiat fugit illum iste laudantium mollitia, neque nisi odit perferendis quam quos saepe sunt vel vero voluptatum. Adipisci doloribus quibusdam sunt velit voluptas.</p>
+            </div>
+            <div class="our-services__description">
+                <img src="img/graphic_design/graphic-design1.jpg" alt="service img" class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum in iure perspiciatis, quis quisquam tempore temporibus velit. Inventore natus necessitatibus odit porro qui! Doloremque itaque laboriosam, nulla officiis quia ratione sed. Accusantium, architecto et id libero minus nisi perspiciatis totam! Ab ad assumenda, consequuntur corporis dolorem exercitationem explicabo ipsam minus molestias nobis nostrum tempora ut. Assumenda, dolores doloribus et laudantium magnam molestias nesciunt numquam qui quibusdam recusandae sequi totam.</p>
+            </div>
+            <div class="our-services__description">
+                <img src="img/graphic_design/graphic-design12.jpg" alt="service img" class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea necessitatibus nemo nostrum provident! Accusamus accusantium amet aspernatur autem doloribus eligendi eos et exercitationem expedita harum id illum incidunt ipsa minus nemo nesciunt nisi provident quibusdam, quis quo sed similique sunt tempore temporibus ullam unde voluptate? Eveniet nesciunt odit sequi.</p>
+            </div>
+            <div class="our-services__description">
+                <img src="img/graphic_design/graphic-design7.jpg" alt="service img" class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae corporis dicta numquam quae, ratione sed soluta sunt voluptatem. Alias aliquid architecto at autem culpa cum cupiditate delectus ducimus ea eaque, eum ex explicabo fugiat fugit id illum in incidunt, iusto laboriosam laborum magnam molestiae mollitia neque obcaecati omnis porro possimus praesentium quibusdam quis, quisquam reiciendis repudiandae sed voluptatem! A alias corporis dolore est ipsam soluta vero. Dolore eaque excepturi laudantium non placeat porro possimus quod sapiente ullam, voluptatibus? Laboriosam, rem!</p>
+            </div>
+            <div class="our-services__description">
+                <img src="img/graphic_design/graphic-design8.jpg" alt="service img" class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam commodi corporis eaque earum, explicabo, in inventore, laudantium magnam optio pariatur similique suscipit veritatis voluptates? Ad deserunt eligendi eos error ipsam maiores odit, pariatur recusandae sunt voluptates? Commodi dolorum repudiandae ullam.</p>
+            </div>
+            <div class="our-services__description">
+                <img src="img/graphic_design/graphic-design11.jpg" alt="service img" class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur cupiditate deserunt doloribus ducimus eum facilis iure laboriosam laborum magni nemo nesciunt nostrum, quam saepe sequi vel, vitae. Accusamus accusantium distinctio dolorem eius harum natus quo recusandae, repellendus repudiandae similique. Aliquam amet aperiam architecto aspernatur, beatae deleniti doloremque ducimus eos eum ex impedit libero nostrum obcaecati officiis quibusdam rem saepe sint soluta suscipit vel. At eum fugiat iure quaerat qui.</p>
             </div>
         </div>
     </div>
@@ -126,7 +139,66 @@
 <section class="breaking-news">
     <div class="container">
         <h2 class="section-header">Breaking News</h2>
-        <div class="breaking-news__gallery"></div>
+        <div class="breaking-news__gallery">
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer1.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Image Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer2.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer3.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer4.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer5.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer6.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer7.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+            <div class="breaking-news__gallery__item">
+                <img src="img/news_img/Layer8.png" alt="news 1">
+                <a href=""></a>
+                <p class="breaking-news__gallery__item__text">Amazing Blog Post</p>
+                <p>By admin | 2 comment</p>
+                <div class="breaking-news__gallery__item__date">12<br> Feb</div>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
 </section>
 <section class="what-people-say">
@@ -148,5 +220,10 @@
 <footer class="copyright">
     &copy Copyright 2015&#8194<span class="text--em">theHam</span>&#8194| All Rights Reserved
 </footer>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
