Що кажуть люди... section done

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -8,6 +8,7 @@
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 </head>
 <body>
 <header class="main-header">
@@ -38,8 +39,6 @@
     </div>
 
 </header>
-
-
 <section class="main-section">
     <h2 class="main-section__h2--bold">THE HAM IS <span class="text--em">WORDPRESS THEME</span></h2>
     <h1 class="main-section__h1--bold">WE ARE CREATIVE</h1>
@@ -89,34 +88,66 @@
             </ul>
             <div class="our-services__description">
                 <img src="img/our_services.png" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium blanditiis, dicta, expedita ipsam ipsum iste laboriosam minus molestias, placeat quod repudiandae suscipit tenetur voluptatibus. A architecto at beatae debitis, deleniti dignissimos distinctio dolor dolores dolorum eaque fuga fugiat fugit illum iste laudantium mollitia, neque nisi odit perferendis quam quos saepe sunt vel vero voluptatum. Adipisci doloribus quibusdam sunt velit voluptas.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium blanditiis, dicta, expedita
+                    ipsam ipsum iste laboriosam minus molestias, placeat quod repudiandae suscipit tenetur voluptatibus.
+                    A architecto at beatae debitis, deleniti dignissimos distinctio dolor dolores dolorum eaque fuga
+                    fugiat fugit illum iste laudantium mollitia, neque nisi odit perferendis quam quos saepe sunt vel
+                    vero voluptatum. Adipisci doloribus quibusdam sunt velit voluptas.</p>
             </div>
             <div class="our-services__description">
-                <img src="img/graphic_design/graphic-design1.jpg" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum in iure perspiciatis, quis quisquam tempore temporibus velit. Inventore natus necessitatibus odit porro qui! Doloremque itaque laboriosam, nulla officiis quia ratione sed. Accusantium, architecto et id libero minus nisi perspiciatis totam! Ab ad assumenda, consequuntur corporis dolorem exercitationem explicabo ipsam minus molestias nobis nostrum tempora ut. Assumenda, dolores doloribus et laudantium magnam molestias nesciunt numquam qui quibusdam recusandae sequi totam.</p>
+                <img src="img/graphic_design/graphic-design1.jpg" alt="service img"
+                     class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque earum in iure perspiciatis, quis
+                    quisquam tempore temporibus velit. Inventore natus necessitatibus odit porro qui! Doloremque itaque
+                    laboriosam, nulla officiis quia ratione sed. Accusantium, architecto et id libero minus nisi
+                    perspiciatis totam! Ab ad assumenda, consequuntur corporis dolorem exercitationem explicabo ipsam
+                    minus molestias nobis nostrum tempora ut. Assumenda, dolores doloribus et laudantium magnam
+                    molestias nesciunt numquam qui quibusdam recusandae sequi totam.</p>
             </div>
             <div class="our-services__description">
-                <img src="img/graphic_design/graphic-design12.jpg" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea necessitatibus nemo nostrum provident! Accusamus accusantium amet aspernatur autem doloribus eligendi eos et exercitationem expedita harum id illum incidunt ipsa minus nemo nesciunt nisi provident quibusdam, quis quo sed similique sunt tempore temporibus ullam unde voluptate? Eveniet nesciunt odit sequi.</p>
+                <img src="img/graphic_design/graphic-design12.jpg" alt="service img"
+                     class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea necessitatibus nemo nostrum
+                    provident! Accusamus accusantium amet aspernatur autem doloribus eligendi eos et exercitationem
+                    expedita harum id illum incidunt ipsa minus nemo nesciunt nisi provident quibusdam, quis quo sed
+                    similique sunt tempore temporibus ullam unde voluptate? Eveniet nesciunt odit sequi.</p>
             </div>
             <div class="our-services__description">
-                <img src="img/graphic_design/graphic-design7.jpg" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae corporis dicta numquam quae, ratione sed soluta sunt voluptatem. Alias aliquid architecto at autem culpa cum cupiditate delectus ducimus ea eaque, eum ex explicabo fugiat fugit id illum in incidunt, iusto laboriosam laborum magnam molestiae mollitia neque obcaecati omnis porro possimus praesentium quibusdam quis, quisquam reiciendis repudiandae sed voluptatem! A alias corporis dolore est ipsam soluta vero. Dolore eaque excepturi laudantium non placeat porro possimus quod sapiente ullam, voluptatibus? Laboriosam, rem!</p>
+                <img src="img/graphic_design/graphic-design7.jpg" alt="service img"
+                     class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae corporis dicta numquam quae, ratione
+                    sed soluta sunt voluptatem. Alias aliquid architecto at autem culpa cum cupiditate delectus ducimus
+                    ea eaque, eum ex explicabo fugiat fugit id illum in incidunt, iusto laboriosam laborum magnam
+                    molestiae mollitia neque obcaecati omnis porro possimus praesentium quibusdam quis, quisquam
+                    reiciendis repudiandae sed voluptatem! A alias corporis dolore est ipsam soluta vero. Dolore eaque
+                    excepturi laudantium non placeat porro possimus quod sapiente ullam, voluptatibus? Laboriosam,
+                    rem!</p>
             </div>
             <div class="our-services__description">
-                <img src="img/graphic_design/graphic-design8.jpg" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam commodi corporis eaque earum, explicabo, in inventore, laudantium magnam optio pariatur similique suscipit veritatis voluptates? Ad deserunt eligendi eos error ipsam maiores odit, pariatur recusandae sunt voluptates? Commodi dolorum repudiandae ullam.</p>
+                <img src="img/graphic_design/graphic-design8.jpg" alt="service img"
+                     class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam commodi corporis eaque earum,
+                    explicabo, in inventore, laudantium magnam optio pariatur similique suscipit veritatis voluptates?
+                    Ad deserunt eligendi eos error ipsam maiores odit, pariatur recusandae sunt voluptates? Commodi
+                    dolorum repudiandae ullam.</p>
             </div>
             <div class="our-services__description">
-                <img src="img/graphic_design/graphic-design11.jpg" alt="service img" class="our-services__description__img">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur cupiditate deserunt doloribus ducimus eum facilis iure laboriosam laborum magni nemo nesciunt nostrum, quam saepe sequi vel, vitae. Accusamus accusantium distinctio dolorem eius harum natus quo recusandae, repellendus repudiandae similique. Aliquam amet aperiam architecto aspernatur, beatae deleniti doloremque ducimus eos eum ex impedit libero nostrum obcaecati officiis quibusdam rem saepe sint soluta suscipit vel. At eum fugiat iure quaerat qui.</p>
+                <img src="img/graphic_design/graphic-design11.jpg" alt="service img"
+                     class="our-services__description__img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aspernatur cupiditate deserunt
+                    doloribus ducimus eum facilis iure laboriosam laborum magni nemo nesciunt nostrum, quam saepe sequi
+                    vel, vitae. Accusamus accusantium distinctio dolorem eius harum natus quo recusandae, repellendus
+                    repudiandae similique. Aliquam amet aperiam architecto aspernatur, beatae deleniti doloremque
+                    ducimus eos eum ex impedit libero nostrum obcaecati officiis quibusdam rem saepe sint soluta
+                    suscipit vel. At eum fugiat iure quaerat qui.</p>
             </div>
         </div>
     </div>
     <footer class="our-services__footer">
         <div class="our-services__footer__content-wrapper">
             <h2><span class="text--em">EVERYTHING IS READY, JUST BUY AND INSTALL NOW</span></h2>
-            <p>Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for you</p>
+            <p>Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for
+                you</p>
             <a href="#" class="btn">PURCHASE NOW</a>
         </div>
     </footer>
@@ -198,16 +229,64 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
 </section>
 <section class="what-people-say">
     <div class="container">
         <h2 class="section-header">What People Say About theHam</h2>
         <div class="what-people-say__quot">&#10075&#10075</div>
-        <div class="what-people-say__reviews">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, modi!
+
+        <!--КарусЭл-->
+
+        <div class="slider-text">
+            <div>
+                <p>קִיפּוֹד קָטָן, קִיפּוֹד דוֹקרָן
+                    הָלַך בשׂדֵה קוֹצים,
+                    הוא קצת מִיהֵר לִפגוֹש חָבֵר,
+                    בקצֵה שׂדֵרָת עֵצִים.
+                    פִּתאוֹם הוא חָש דקִירָה באַף
+                    עמד תחתיו נִדהַם.
+                    "האם דקרתי את עצמי
+                    או קוֹץ נִנעַץ לי שם?</p>
+                <p><span>ERAN LASSER</span><br>CO-Founder (DAN.IT Kyiv)</p>
+            </div>
+            <div><p>Kyiv is the capital of Ukraine.
+                Kyiv is situated on the banks of the Dnieper river.
+                Kyiv is a large political, industrial and cultural centre. There are many banks, shops, theatres,
+                museums, libraries in Kyiv.
+                The central street of the capital is Khreshchatyk. There are many fine buildings in Khreshchatyk.
+                Kyiv is especially beautiful in spring when the chestnut trees are in blossom.</p>
+                <p><span>JULIA SHTALTOVNA</span><br>Head of Soft-Skills (DAN.IT Kyiv)</p></div>
+            <div><p>Під час практики хлопці ознайомились з законодавчими та іншими нормативними актами, що регулюють
+                діяльність IT-сектору України, методичними рекомендаціями щодо організації менторського нагляду,
+                схвалених науково-методичною радою при Генеральній прокуратурі України та інші. Ознайомились з
+                методиками написання прогграм на Java, Javascript та ін...</p>
+                <p><span>VOVA DERKACH</span><br>Program Developer (Destination Unknown)</p></div>
+            <div><p>Благодаря двухэтапному отбору кандидатов на обучение, мы формируем группы мотивированных,
+                амбициозных и целеустремленных студентов. Занимаясь в командах, они пошагово достигают высоких
+                результатов в работе над проектами, и на выходе гарантированно становятся первоклассными
+                специалистами</p>
+                <p><span>EDDIE PRILEPSKI</span><br>CO-Founder (DAN.IT Kyiv)</p></div>
+            <div><p>¯ \ _ (ツ) _ / ¯</p>
+                <p><span>Mr. ZOZICH</span><br>Course Coordinator(DAN.IT Kyiv)</p></div>
         </div>
-        <div class="what-people-say__carousel"></div>
+
+        <div class="slider-img">
+            <div><img src="img/people_img/people2.jpg" alt=""></div>
+            <div><img src="img/people_img/people3.jpg" alt=""></div>
+            <div><img src="img/people_img/people4.jpg" alt=""></div>
+            <div><img src="img/people_img/people5.jpg" alt=""></div>
+            <div><img src="img/people_img/people1.jpg" alt=""></div>
+        </div>
+
+
+        <div class="slider-nav">
+            <div><img src="img/people_img/people5.jpg" alt=""></div>
+            <div><img src="img/people_img/people1.jpg" alt=""></div>
+            <div><img src="img/people_img/people2.jpg" alt=""></div>
+            <div><img src="img/people_img/people3.jpg" alt=""></div>
+            <div><img src="img/people_img/people4.jpg" alt=""></div>
+        </div>
+
     </div>
 </section>
 <section class="gallery-of-best-images">
@@ -224,6 +303,9 @@
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+
+<script src="slick/slick.min.js"></script>
 <script src="js/script.js"></script>
+
 </body>
 </html>
