Modal window buttons style changed

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 <header class="main-header">
-
     <div class="logo-wrapper">
         <a href="#">
             <div class="logo__hexagon">
@@ -39,6 +38,7 @@
     </div>
 </header>
 <section class="main-section">
+    <a name="home" href="#"></a>
     <h2 class="main-section__h2--bold">THE HAM IS <span class="text--em">WORDPRESS THEME</span></h2>
     <h1 class="main-section__h1--bold">WE ARE CREATIVE</h1>
     <h2 class="main-section__h2--thin">Just Buy And Enjoy These Awesome Features</h2>
@@ -74,9 +74,11 @@
     </div>
 </footer>
 <section class="our-services">
+
     <div class="container">
 
         <h2 class="section-header">Our Services</h2>
+        <a name="service" href="#"></a>
         <ul class="our-services__nav">
             <li class="our-services__nav__item item-active">Web Design</li>
             <li class="our-services__nav__item">Graphic Design</li>
@@ -167,6 +169,7 @@
 <section class="breaking-news">
     <div class="container">
         <h2 class="section-header">Breaking News</h2>
+        <a name="blog" href="#"></a>
         <div class="breaking-news__gallery">
             <div class="breaking-news__gallery__item">
                 <img src="img/news_img/Layer1.png" alt="news 1">
@@ -272,11 +275,11 @@
             <div><img src="img/people_img/people1.jpg" alt=""></div>
         </div>
         <div class="slider-nav">
-            <div><img src="img/people_img/people5.jpg" alt=""></div>
-            <div><img src="img/people_img/people1.jpg" alt=""></div>
             <div><img src="img/people_img/people2.jpg" alt=""></div>
             <div><img src="img/people_img/people3.jpg" alt=""></div>
             <div><img src="img/people_img/people4.jpg" alt=""></div>
+            <div><img src="img/people_img/people5.jpg" alt=""></div>
+            <div><img src="img/people_img/people1.jpg" alt=""></div>
         </div>
     </div>
 </section>
@@ -307,19 +310,16 @@
                     <input type="text" name="username" placeholder="Your mail*" required>
                     <input type="password" name="password" placeholder="Your password*" required>
                     <input class="modalBtn-close" type="submit" value="Order now">
-                    <div class="forgot-password"><label><input type="checkbox" checked="checked">Remember Me</label><a
+                    <div class="forgot-password"><label><input type="checkbox" name="check">Remember Me</label"><a
                             href="#">Forgot Password?</a></div>
                 </div>
                 <div class="modal-window__col">
                     <p class="modal-window__block-header--em">Subscribe and get more options!</p>
-                    <a href="#" class="fb social-media__btn modalBtn-close">
-                        <i class="fab fa-facebook-square"></i> Sign In With Facebook
+                    <a href="#" class="fb social-media__btn modalBtn-close">Sign In With Facebook
                     </a>
-                    <a href="#" class="twitter social-media__btn modalBtn-close">
-                        <i class="fab fa-twitter-square"></i> Sign In With Twitter
+                    <a href="#" class="twitter social-media__btn modalBtn-close">Sign In With Twitter
                     </a>
-                    <a href="#" class="google social-media__btn modalBtn-close">
-                        <i class="fab fa-google-plus-square"></i> Sign In With Google+
+                    <a href="#" class="google social-media__btn modalBtn-close">Sign In With Google+
                     </a>
                 </div>
             </div>
